check_output_2.txt
   Compiling govee v0.1.0 (/Users/hank/govee2mqtt)
error: unknown serde container attribute `ignore_unknown_fields`
   --> src/undoc_api.rs:668:9
    |
668 | #[serde(ignore_unknown_fields)]
    |         ^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `OneClickIotRuleDevice: serde::Deserialize<'de>` is not satisfied
    --> src/undoc_api.rs:637:21
     |
 637 |     pub device_obj: OneClickIotRuleDevice,
     |                     ^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Deserialize<'_>` is not implemented for `OneClickIotRuleDevice`
    --> src/undoc_api.rs:669:1
     |
 669 | pub struct OneClickIotRuleDevice {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `OneClickIotRuleDevice` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Deserialize<'de>`:
               `&'a [u8]` implements `Deserialize<'de>`
               `&'a serde_json::value::RawValue` implements `Deserialize<'de>`
               `&'a std::path::Path` implements `Deserialize<'de>`
               `&'a str` implements `Deserialize<'de>`
               `()` implements `Deserialize<'de>`
               `(T,)` implements `Deserialize<'de>`
               `(T0, T1)` implements `Deserialize<'de>`
               `(T0, T1, T2)` implements `Deserialize<'de>`
             and 269 others
note: required by a bound in `next_element`
    --> /Users/hank/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_core-1.0.228/src/de/mod.rs:1771:12
     |
1769 |     fn next_element<T>(&mut self) -> Result<Option<T>, Self::Error>
     |        ------------ required by a bound in this associated function
1770 |     where
1771 |         T: Deserialize<'de>,
     |            ^^^^^^^^^^^^^^^^ required by this bound in `SeqAccess::next_element`
     = note: the full name for the type has been written to '/Users/hank/govee2mqtt/target/debug/deps/govee-a6dbdbf951f25571.long-type-9130398260227266407.txt'
     = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `OneClickIotRuleDevice: serde::Deserialize<'de>` is not satisfied
    --> src/undoc_api.rs:637:21
     |
 637 |     pub device_obj: OneClickIotRuleDevice,
     |                     ^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Deserialize<'_>` is not implemented for `OneClickIotRuleDevice`
    --> src/undoc_api.rs:669:1
     |
 669 | pub struct OneClickIotRuleDevice {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `OneClickIotRuleDevice` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Deserialize<'de>`:
               `&'a [u8]` implements `Deserialize<'de>`
               `&'a serde_json::value::RawValue` implements `Deserialize<'de>`
               `&'a std::path::Path` implements `Deserialize<'de>`
               `&'a str` implements `Deserialize<'de>`
               `()` implements `Deserialize<'de>`
               `(T,)` implements `Deserialize<'de>`
               `(T0, T1)` implements `Deserialize<'de>`
               `(T0, T1, T2)` implements `Deserialize<'de>`
             and 269 others
note: required by a bound in `next_value`
    --> /Users/hank/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_core-1.0.228/src/de/mod.rs:1916:12
     |
1914 |     fn next_value<V>(&mut self) -> Result<V, Self::Error>
     |        ---------- required by a bound in this associated function
1915 |     where
1916 |         V: Deserialize<'de>,
     |            ^^^^^^^^^^^^^^^^ required by this bound in `MapAccess::next_value`
     = note: the full name for the type has been written to '/Users/hank/govee2mqtt/target/debug/deps/govee-a6dbdbf951f25571.long-type-9130398260227266407.txt'
     = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `OneClickIotRuleDevice: serde::Deserialize<'de>` is not satisfied
   --> src/undoc_api.rs:634:10
    |
634 | #[derive(Deserialize, Serialize, Debug, Clone)]
    |          ^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Deserialize<'_>` is not implemented for `OneClickIotRuleDevice`
   --> src/undoc_api.rs:669:1
    |
669 | pub struct OneClickIotRuleDevice {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `OneClickIotRuleDevice` type
    = note: for types from other crates check whether the crate offers a `serde` feature flag
    = help: the following other types implement trait `Deserialize<'de>`:
              `&'a [u8]` implements `Deserialize<'de>`
              `&'a serde_json::value::RawValue` implements `Deserialize<'de>`
              `&'a std::path::Path` implements `Deserialize<'de>`
              `&'a str` implements `Deserialize<'de>`
              `()` implements `Deserialize<'de>`
              `(T,)` implements `Deserialize<'de>`
              `(T0, T1)` implements `Deserialize<'de>`
              `(T0, T1, T2)` implements `Deserialize<'de>`
            and 269 others
note: required by a bound in `cache::_::_serde::__private228::de::missing_field`
   --> /Users/hank/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde-1.0.228/src/private/de.rs:26:8
    |
 24 | pub fn missing_field<'de, V, E>(field: &'static str) -> Result<V, E>
    |        ------------- required by a bound in this function
 25 | where
 26 |     V: Deserialize<'de>,
    |        ^^^^^^^^^^^^^^^^ required by this bound in `missing_field`
    = note: the full name for the type has been written to '/Users/hank/govee2mqtt/target/debug/deps/govee-a6dbdbf951f25571.long-type-9130398260227266407.txt'
    = note: consider using `--verbose` to print the full type name to the console
    = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `OneClickIotRuleDevice: serde::Serialize` is not satisfied
    --> src/undoc_api.rs:634:23
     |
 634 | #[derive(Deserialize, Serialize, Debug, Clone)]
     |                       ^^^^^^^^^ unsatisfied trait bound
...
 637 |     pub device_obj: OneClickIotRuleDevice,
     |     --- required by a bound introduced by this call
     |
help: the trait `Serialize` is not implemented for `OneClickIotRuleDevice`
    --> src/undoc_api.rs:669:1
     |
 669 | pub struct OneClickIotRuleDevice {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     = note: for local types consider adding `#[derive(serde::Serialize)]` to your `OneClickIotRuleDevice` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Serialize`:
               &'a T
               &'a mut T
               ()
               (T,)
               (T0, T1)
               (T0, T1, T2)
               (T0, T1, T2, T3)
               (T0, T1, T2, T3, T4)
             and 195 others
note: required by a bound in `cache::_::_serde::ser::SerializeStruct::serialize_field`
    --> /Users/hank/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_core-1.0.228/src/ser/mod.rs:1917:21
     |
1915 |     fn serialize_field<T>(&mut self, key: &'static str, value: &T) -> Result<(), Self::Error>
     |        --------------- required by a bound in this associated function
1916 |     where
1917 |         T: ?Sized + Serialize;
     |                     ^^^^^^^^^ required by this bound in `SerializeStruct::serialize_field`
     = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
error: could not compile `govee` (bin "govee") due to 5 previous errors
